@@ -1,3 +1,9 @@
+Wed Nov 12 14:52:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/OS_Test.cpp:
+          No need to use TEST_DIR, the problem on WinCE was a problem in
+          ACE_OS::rename
+
 Wed Nov 12 14:10:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/config-vxworks6.7.h:
